updated with existing method to retrieve userdetails